...
                        android:hint="@string/password"
                        app:errorEnabled="true"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:hint="@string/retype_password"
                        app:errorEnabled="true"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPasswordText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
...
